Синхронизация, Modomodrek001 плагин для mopivo (pivo)